# mahjong-cpp

./: .gitignore  CMakeLists.txt  README.md  game.out  main.cpp
src/: config.hpp  game.cpp  game.hpp  hand.cpp  hand.hpp  mahjong.hpp  player.cpp  player.hpp  tile.cpp  tile.hpp  wall.cpp  wall.hpp
